Fix styling issues (see detailed commit msg)
Issues:
* Set fgColor to '#FFF' instead of 'FFF'
* Prevent profile img from overflowing the card

--- a/src/style/components/ProfileCard.scss
+++ b/src/style/components/ProfileCard.scss
@@ -23,7 +23,6 @@
 
 .ProfileCard-content-wrapper {
   display: flex;
-  height: 100%;
 }
 
 $ProfileCard-img-wrapper-width: 59%;
